[project]
name = "lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dagster>=1.13.9",
    "deltalake>=1.6.0",
    "duckdb>=1.0.0",
    "polars>=1.41.2",
    "pre-commit>=4.6.0",
    "soda-core-duckdb>=3.5.6",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.ruff]
  line-length = 88
  target-version = "py312"

[tool.ruff.lint]
  select = ["E", "F", "I", "UP", "B"]
  ignore = ["E501"]
